# RMB

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  ats_scan_results.csv  ats_scanner.py  backlog.md  companies.csv  cursorrules.mdc  pyproject.toml  recruiter_market_brief_prd_v1.md  requirements-dev.txt  requirements.txt
.github/workflows/: brief.yml  ci.yml  metrics.yml  scrape.yml
backend/src/: __init__.py  logging_config.py
backend/src/config/: settings.py
backend/src/db/: client.py  job_storage.py
backend/src/processors/: classifier.py  job_processor.py
backend/src/scrapers/: ashby_scraper.py  company_scraper.py  greenhouse_scraper.py  lever_scraper.py
config/: companies.json
database/: schema.sql
database/migrations/: 20260128_1200_initial_schema.sql
docs/: architecture.md
frontend/src/app/: page.tsx
scripts/: compute_metrics.py  generate_brief.py  migrate_csv_data.py  migrate_csv_simple.py  run_daily_scrape.py  scrape_all_ashby.py  scrape_all_ashby_final.py  test_scrape_simple.py  test_scraper.py
supabase/: config.toml
supabase/migrations/: 20260128_1200_initial_schema.sql
tests/integration/: test_database.py
tests/unit/: test_classifier.py
